# fiap-tech-challenge-5mlet

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
cache/: exportacao_espumantes_2019.html  exportacao_suco_de_uva_2022.html  exportacao_uvas_frescas_2020.html  importacao_suco_de_uva_2017.html  importacao_uvas_frescas_2020.html  importacao_uvas_frescas_2022.html  importacao_uvas_frescas_2023.html  importacao_vinhos_de_mesa_2023.html
src/fiap_tech_challenge_5mlet/: app.py  config.py
src/fiap_tech_challenge_5mlet/api/: __init__.py  auth_routes.py  routes.py
src/fiap_tech_challenge_5mlet/auth/: __init__.py  jwt_handler.py
src/fiap_tech_challenge_5mlet/models/: __init__.py  comercializacao.py  exportacao.py  importacao.py  processamento.py  producao.py
src/fiap_tech_challenge_5mlet/scraper/: __init__.py  comercializacao_service.py  exportacao_service.py  html_fetcher.py  importacao_service.py  processamento_service.py  producao_service.py
src/fiap_tech_challenge_5mlet/utils/: __init__.py  comercializacao_parser.py  exportacao_parser.py  importacao_parser.py  processamento_parser.py  producao_parser.py
